maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:24: error: '(' expected but '{' found.
         if{isFacingWall(){
           ^WallFollowerMaze:28: error: illegal start of simple expression
       }
       ^